login connected to mongo

--- a/package.json
+++ b/package.json
@@ -77,6 +77,12 @@
     "testMatch": [
       "**/tests/unit/**/*.spec.(js|jsx|ts|tsx)|**/__tests__/*.(js|jsx|ts|tsx)"
     ],
-    "testURL": "http://localhost/"
+    "testURL": "http://localhost/",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*"
+    ],
+    "coverageDirectory": "<rootDir>/coverage",
+    "coverageReporters": [ "lcov" ]
   }
 }
