fixed bugs from merging

--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
       "src/**/*"
     ],
     "coverageDirectory": "<rootDir>/coverage",
-    "coverageReporters": [ "lcov" ]
+    "coverageReporters": [
+      "lcov"
+    ]
   }
 }
